--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,16 @@
 	align-items: center;
 	min-height: 80px;
 	padding: 10px 0;
-
-	/* debug */
-	background-color: lightblue;
+	background-color: rgb(37, 94, 232);
 }
 
 .header-nav {
-	display: flex;
 	flex-grow: 1;
 	line-height: 30px;
 }
 
 .header-nav>* {
-	flex-basis: 20%;
+	flex-basis: 50%;
 	padding: 5px 10px;
 
 	/* debug */
@@ -28,6 +25,15 @@
 .header-links {
 	flex-grow: 1;
 	text-align: center;
+	
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	padding: 0 20px;
+	font-size: 20px;
+	font-weight: 400;
 }
 
 .header-login {
@@ -40,19 +46,31 @@
 	padding: 50px 0;
 	display: flex;
 	justify-content: center;
-
-
-	/* debug */
-	background-color: darkblue;
+	background-image: url(../img/jumbo.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .jumbotron .content {
 	min-height: 400px;
-	width: 50%;
+	width: 55%;
+}
+.hero-title {
+	font-size: 60px;
+	color: white;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	margin: 20px;
 
-	/* debug */
-	background-color: #ee82ee;
-	border: 2px dashed black;
+}
+
+.hero-desc {
+	font-size: 24px;
+	color: white;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	line-height: 1.6em
 }
 
 /* MAIN & SECTIONS */
