--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,6 @@
 	margin-right: 20px;
 	font-size: 20px;
 	font-weight: 500;
-
 }
 
 i {
@@ -128,13 +127,12 @@ main>section {
 
 main>section>.container {
 	display: flex;
-	padding-top: 60px;
-	
-	/* debug */
+	padding-top: 40px;
 	min-height: 500px;
+	flex-direction:row;
 }
 .side-col{
-margin: 10px 80px 40px 80px;
+margin: 60px 80px 40px 80px;
 }
 
 .main-col-img {
@@ -145,59 +143,76 @@ margin: 10px 80px 40px 80px;
 }
 
 .side-col-title {
-	font-size: 58px;
+	font-size: 55px;
 	font-weight: bold;
 	line-height: 1.2;
-	margin-bottom: 30px;
-
+	margin-bottom: 20px;
 }
-
+.mg1{
+	margin-top: -30px;
+}
 .side-col-tx {
 font-size: 20px;
 line-height: 1.6;
 font-weight: 300;
 }
+
 .bg-white {
 	background-color: white;
 }
 
 .bg-gray {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  flex-direction: column;
+  gap: 30px;
 	background-image: url(../img/wave.svg);
-	background-repeat:no-repeat;
+	background-repeat: repeat;
 	background-size: cover;
-	;
-	
-}
-wave.svg
-.wave-1hkxOo {
-	color: rgb(246, 246, 246);
-}
-
-.main-col {
-	flex-grow: 2;
-
-	/* debug */
-	/* background-color: cornflowerblue;
-	border: 2px dashed black; */
-}
-
-.side-col {
-	flex-grow: 1;
-
-	/* debug */
-	/* background-color: pink;
-	border: 2px dashed black; */
 }
 
 .hilighted-content {
 	flex-grow: 1;
-
-	/* debug */
-	min-height: 800px;
-	background-color: forestgreen;
-	border: 2px dashed black;
+	min-height: 1000px;
 }
 
+.hilighted-title {
+	font-size: 55px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+.hilighted-tx {
+	font-size: 20px;
+	line-height: 1.6;
+	text-align: center;
+	}
+
+	.hilighted-img {
+	width: 100%;
+  border-radius: 10px;
+	margin-top: -30px;
+	}
+
+	.input-title {
+		font-size: 30px ;
+		text-align: center;
+		font-weight: bold;
+	}
+
+	.input-button {
+	text-decoration: none;
+	background-color: #8ea1e1;
+	color: #ffff;
+	border: 1px solid #8ea1e1;
+	border-radius: 28px;
+	padding: 16px 32px;
+	margin-right: 20px;
+	font-size: 20px;
+	font-weight: 500;
+	}
 /* FOOTER */
 
 .footer-main {
